decklist content update

--- a/decklists/salamangreat.html
+++ b/decklists/salamangreat.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
-    <title>Tournament</title>
+    <title>Decklist: Salamangreat</title>
 </head>
 <body>
     <ul class="navbar">
