tourna content added

--- a/tournaments/tourna-1114.html
+++ b/tournaments/tourna-1114.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Tournament</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -33,7 +35,32 @@
             </ul>
         </li>
     </ul>
-    
+
+    <div class="article">
+        <h1 class="title">OtakuFest 2022 Yugioh Tournament</h1>
+
+
+        <div class="tourna-content">
+            <div class="content-image">
+                <img src="../images/tournaments/1114-2.jpg" style="border-top-left-radius: 10px;">
+                <img src="../images/tournaments/1114-1.jpg" style="border-top-right-radius: 10px;">
+            </div>
+
+            <div class="content-desc">
+                <p>Haiiro Neko Hobby Shop hosts Otakufest 2022's Yugioh Tournament! <br><br>
+                    See the smile on everyone's faces as Dumaguete's Haiiro Neko Hobby Shop conducts the Yu-gi-oh
+                    Tournament at Cebu's biggest convention @Otakufest 2022. <br><br>
+                    With 30 passionate duelists fighting for glory, it was Cebu Yu-gi-oh Community's Arthur Yap who
+                    bagged the championship title while Yu-Gi-Oh Dumaguete Community's Michael Kristoffer M. Doyongan
+                    got the first runner-up title.<br><br>
+                    Again, thank you to everyone who joined the tournament and we'll see you again in future duels!
+                    #haiironekodumaguete #wearehaiironeko #morethanjustahobbyshop #otakufest2022 #Yugioh #yugiohcebu
+                    #yugiohdumaguete<br><br>
+                    Photo credits: Sir Edison Curameng and Jack Lyn Leyson</p>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +78,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="../about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
