--- a/tournaments/tourna-apr27.html
+++ b/tournaments/tourna-apr27.html
@@ -33,6 +33,29 @@
             </ul>
         </li>
     </ul>
+
+    <div class="article">
+        <h1 class="title">Yu-Gi-Oh Sanctioned Tournament</h1>
+
+        
+        <div class="tourna-content">
+            <div class="content-image">
+                <img src="../images/tournaments/924-1.jpg" style="border-top-left-radius: 10px;">
+                <img src="../images/tournaments/924-2.jpg" style="border-top-right-radius: 10px;">
+            </div>
+            <div class="content-desc">
+                <p>Yu - Gi- Oh Sanctioned Tournament -Sept 24, 2022 Top 4 ! 
+                    [9 players]</p>
+                    <br>
+                    <ol>
+                        <li>Rae Cortez - Floowandeeznuts</li>
+                        <li>Kent Catacutan - Branded Despicable</li>
+                        <li>Edison Curameng - Tearlaments Orcust</li>
+                        <li>Kirk Saromines - Byssted Kshatri-la)</li>
+                    </ol>
+            </div>
+        </div>
+    </div>
     
     <div class="footer">
         <div class="footer-content">
