--- a/tournaments/tourna-aug5.html
+++ b/tournaments/tourna-aug5.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Tournament</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -33,7 +35,34 @@
             </ul>
         </li>
     </ul>
-    
+
+    <div class="article">
+        <h1 class="title">Yu-Gi-Oh Sanctioned Tournament</h1>
+
+
+        <div class="tourna-content">
+            <div class="content-image">
+                <img src="../images/tournaments/85-1.jpg" style="border-top-left-radius: 10px;">
+                <img src="../images/tournaments/85-2.jpg" style="border-top-right-radius: 10px;">
+            </div>
+            <div class="content-desc">
+                <p>YuGiOh Day Top 8 (16 players)
+                </p>
+                <br>
+                <ol>
+                    <li>Marc Eugene Dacua (Salamangreat)</li>
+                    <li>Paulo Illustrisimo (Branded Bystials)</li>
+                    <li>Rae Cortez (Sky Strikers)</li>
+                    <li>Kenth Catacutan (Vaylantz)</li>
+                    <li>Ronel Jade Rosales (Mikanko)</li>
+                    <li>Ford Alvarez (R.ACE)</li>
+                    <li>Alfred Arcayan (Traptrix)</li>
+                    <li>Jeremy Solera (Labrynth)</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +80,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="../about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
