--- a/tournaments/tourna-jun18.html
+++ b/tournaments/tourna-jun18.html
@@ -34,6 +34,27 @@
         </li>
     </ul>
     
+    <div class="article">
+        <h1 class="title">Yu-Gi-Oh Casual Tournament</h1>
+
+        
+        <div class="tourna-content">
+            <div class="content-image">
+                <img src="../images/tournaments/618-2.jpg" style="border-top-left-radius: 10px;">
+                <img src="../images/tournaments/618-1.jpg" style="border-top-right-radius: 10px;">
+            </div>
+            <div class="content-desc">
+                <p>Lancers Yugioh Casual Tournament - Sept 24, 2022 Top 3 ! </p>
+                    <br>
+                    <ol>
+                        <li>Arsyl Peter - Cyber Dragons</li>
+                        <li>Jezreel - Unchained</li>
+                        <li>Vinz - Code Talkers</li>
+                    </ol>
+            </div>
+        </div>
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
