--- a/decklists/blue-eyes.html
+++ b/decklists/blue-eyes.html
@@ -11,19 +11,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
-    <title>Decklist: Dinos</title>
-
-    <style>
-        .d img {
-            width: 50%;
-        }
-
-        .imgs {
-            display: flex;
-            width: 95%;
-            flex-direction: row;
-        }
-    </style>
+    <title>Decklist: Salamangreat</title>
 </head>
 
 <body>
@@ -49,22 +37,20 @@
     </ul>
 
     <div class="article">
+
         <div class="d">
-            <h2 class="d-name">Dinos<i class="fa-solid fa-star"></i></h2>
-
-            <div class="imgs">
-                <img src="../images/decklist/dino1.jpg" alt="">
-                <img src="../images/decklist/dino2.jpg" alt="">
-            </div>
+            <h2 class="d-name">Blue Eyes White Dragon<i class="fa-solid fa-star"></i></h2>
+           
+            <img src="../images/decklist/blue-eyes.jpg" alt="">
             <div class="d-desc">
-                Duelist: Nelsy Rosas <br><br>
-                Lancers' Mini Tournament (PSYCON Qualifiers)<br><br>
-                No. of Players: 4 Players (Round Robin)<br><br>
-                Standing: 2nd<br><br>
+                Duelist: Thomas Jason Tipactipac<br><br>
+                P2L Yugioh Sanctioned Tournament<br><br>
+                No. of Players: 18 Players<br><br>
+                Standing: 1st<br><br>
 
-                R1: vs Floowandereeze O-O<br><br>
-                R2: vs Cyberdark X<br><br>
-                R3: vs @ignister O-X<br><br>
+                R1: vs Exodia Millennium O-X-O<br><br>
+                R2: vs Madolche Princessess O-X-O<br><br>
+                R3: vs Malice Gou X-O-O<br><br>
             </div>
 
         </div>
