--- a/decklists/cyber-dragon.html
+++ b/decklists/cyber-dragon.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Decklist: Cyber Dragons</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -34,6 +36,26 @@
         </li>
     </ul>
 
+    <div class="article">
+
+        <div class="d">
+            <h2 class="d-name">Cyber Dragon <i class="fa-solid fa-star"></i></h2>
+
+            <img src="../images/decklist/cydra.jpg" alt="">
+            <div class="d-desc">
+                Duelist: Arsyl Peter Rosas <br><br>
+                LANCERS CASUAL TOURNAMENT<br><br>
+                No. of Players: 6 Players<br><br>
+                Standing: 1st<br><br>
+
+                R1: vs Cyber Angel Herald O-O<br><br>
+                R2: vs Salamangreat X-O-O<br><br>
+                R3: vs Unchained O-X-O<br><br>
+            </div>
+
+        </div>
+
+    </div>
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +73,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="../about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
