--- a/decklists/exodia.html
+++ b/decklists/exodia.html
@@ -11,19 +11,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
-    <title>Decklist: Dinos</title>
-
-    <style>
-        .d img {
-            width: 50%;
-        }
-
-        .imgs {
-            display: flex;
-            width: 95%;
-            flex-direction: row;
-        }
-    </style>
+    <title>Decklist: Salamangreat</title>
 </head>
 
 <body>
@@ -49,24 +37,22 @@
     </ul>
 
     <div class="article">
+
         <div class="d">
-            <h2 class="d-name">Dinos<i class="fa-solid fa-star"></i></h2>
-
-            <div class="imgs">
-                <img src="../images/decklist/dino1.jpg" alt="">
-                <img src="../images/decklist/dino2.jpg" alt="">
-            </div>
+            <h2 class="d-name">Millenium Exodia<i class="fa-solid fa-star"></i></h2>
+           
+            <img src="../images/decklist/exodia.jpg" alt="">
             <div class="d-desc">
-                Duelist: Nelsy Rosas <br><br>
-                Lancers' Mini Tournament (PSYCON Qualifiers)<br><br>
-                No. of Players: 4 Players (Round Robin)<br><br>
-                Standing: 2nd<br><br>
+                Duelist: Jonathan Gue<br><br>
+                Yu-Gi-Oh! Worlds Celebration Tournament<br><br>
+                No. of Players: 15 Players<br><br>
+                Standing: 5th<br><br>
 
-                R1: vs Floowandereeze O-O<br><br>
-                R2: vs Cyberdark X<br><br>
-                R3: vs @ignister O-X<br><br>
+                R1: vs Madolche X-X<br><br>
+                R2: BYE (win by default) <br><br>
+                R3: vs Mannadium O<br><br>
+                R4: vs White Woods/Toys X-X<br><br>
             </div>
-
         </div>
 
     </div>
