--- a/decklists/memento.html
+++ b/decklists/memento.html
@@ -12,18 +12,6 @@
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
     <title>Decklist: Dinos</title>
-
-    <style>
-        .d img {
-            width: 50%;
-        }
-
-        .imgs {
-            display: flex;
-            width: 95%;
-            flex-direction: row;
-        }
-    </style>
 </head>
 
 <body>
@@ -53,18 +41,19 @@
             <h2 class="d-name">Dinos<i class="fa-solid fa-star"></i></h2>
 
             <div class="imgs">
-                <img src="../images/decklist/dino1.jpg" alt="">
-                <img src="../images/decklist/dino2.jpg" alt="">
+                <img src="../images/decklist/memento1.jpg" alt="">
+                <img src="../images/decklist/memento2.jpg" alt="">
             </div>
             <div class="d-desc">
-                Duelist: Nelsy Rosas <br><br>
-                Lancers' Mini Tournament (PSYCON Qualifiers)<br><br>
-                No. of Players: 4 Players (Round Robin)<br><br>
-                Standing: 2nd<br><br>
+                Duelist: Chris Chan Creayla<br><br>
+                Halloween sanctioned tournament<br><br>
+                No. of Players: 16 Players<br><br>
+                Standing: 3rd<br><br>
 
-                R1: vs Floowandereeze O-O<br><br>
-                R2: vs Cyberdark X<br><br>
-                R3: vs @ignister O-X<br><br>
+                R1: vs Snake-Eyes O-O<br><br>
+                R2: vs Lightsworn Tearlaments O<br><br>
+                R3: vs Madolche O-O<br><br>
+                R4: vs Tenpai X-O-X<br><br>
             </div>
 
         </div>
