--- a/decklists/salamangreat.html
+++ b/decklists/salamangreat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>Decklist: Salamangreat</title>
 </head>
+
 <body>
     <ul class="navbar">
         <li class="logo">Lancers HQ</li>
@@ -34,6 +36,28 @@
         </li>
     </ul>
 
+    <div class="article">
+
+        <div class="d">
+            <h2 class="d-name">Salamangreat <i class="fa-solid fa-star"></i></h2>
+           
+            <img src="../images/decklist/salad.jpg" alt="">
+            <div class="d-desc">
+                Duelist: Marc Eugene Dacua <br><br>
+                PSYCON 2024 YUGIOH TOURNAMENT <br><br>
+                No. of Players: 18 Players<br><br>
+                Standing: 8th<br><br>
+
+                R1: vs Tribrigade Spright X-O-O<br><br>
+                R2: vs Infernoble Knight X-X<br><br>
+                R3: vs Ragnaraika O-X-O<br><br>
+                R4: vs Tenpai Sangen O-X-X<br><br>
+            </div>
+
+        </div>
+
+    </div>
+
     <div class="footer">
         <div class="footer-content">
             <div>
@@ -51,8 +75,10 @@
     </div>
 
     <div class="copyright">
-        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
+        <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
+            Entertainment.
             © Developed by <a href="../about-dev.html">MarNonymous792</a></p>
     </div>
 </body>
+
 </html>
