memento title changed

--- a/decklists/memento.html
+++ b/decklists/memento.html
@@ -38,7 +38,7 @@
 
     <div class="article">
         <div class="d">
-            <h2 class="d-name">Dinos<i class="fa-solid fa-star"></i></h2>
+            <h2 class="d-name">Memento<i class="fa-solid fa-star"></i></h2>
 
             <div class="imgs">
                 <img src="../images/decklist/memento1.jpg" alt="">
