--- a/decklist.html
+++ b/decklist.html
@@ -78,13 +78,13 @@
             <a>Community ▼</a>
             <ul class="dropdown">
                 <li><a href="tourna.html">Tournaments</a></li>
-                <li><a href="decklist.html">Deck List</a></li>
+                <li><a href="decklist.html">Deck Report</a></li>
             </ul>
         </li>
     </ul>
 
     <div class="article">
-        <h1 class="title">Deck Lists</h1>
+        <h1 class="title">Deck Report</h1>
         <div class="decklist">
            
             <a href="./decklists/salamangreat.html"><div class="deck">
