--- a/decklists/dinos.html
+++ b/decklists/dinos.html
@@ -12,18 +12,6 @@
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
     <title>Decklist: Dinos</title>
-
-    <style>
-        .d img {
-            width: 50%;
-        }
-
-        .imgs {
-            display: flex;
-            width: 95%;
-            flex-direction: row;
-        }
-    </style>
 </head>
 
 <body>
@@ -43,7 +31,7 @@
             <a>Community ▼</a>
             <ul class="dropdown">
                 <li><a href="../tourna.html">Tournaments</a></li>
-                <li><a href="../decklist.html">Deck List</a></li>
+                <li><a href="../decklist.html">Deck Report</a></li>
             </ul>
         </li>
     </ul>
@@ -57,14 +45,14 @@
                 <img src="../images/decklist/dino2.jpg" alt="">
             </div>
             <div class="d-desc">
-                Duelist: Nelsy Rosas <br><br>
-                Lancers' Mini Tournament (PSYCON Qualifiers)<br><br>
-                No. of Players: 4 Players (Round Robin)<br><br>
+                Duelist: Jezreel Gabayan<br><br>
+                Battle of Champions<br><br>
+                No. of Players: 8 Players<br><br>
                 Standing: 2nd<br><br>
 
-                R1: vs Floowandereeze O-O<br><br>
-                R2: vs Cyberdark X<br><br>
-                R3: vs @ignister O-X<br><br>
+                R1: vs Purrely X-O-O<br><br>
+                R2: vs Rescue Ace O-O<br><br>
+                R3: vs Fire Fist O-X-X<br><br>
             </div>
 
         </div>
