--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span>Community ▼</spa>
             <ul class="dropdown">
                 <li><a href="tourna.html">Tournaments</a></li>
-                <li><a href="decklist.html">Deck List</a></li>
+                <li><a href="decklist.html">Deck Report</a></li>
             </ul>
         </li>
     </ul>
