--- a/tourna.html
+++ b/tourna.html
@@ -40,7 +40,7 @@
             <a>Community ▼</a>
             <ul class="dropdown">
                 <li><a href="tourna.html">Tournaments</a></li>
-                <li><a href="decklist.html">Deck List</a></li>
+                <li><a href="decklist.html">Deck Report</a></li>
             </ul>
         </li>
     </ul>
