--- a/singles.html
+++ b/singles.html
@@ -1563,6 +1563,9 @@
                 <a href="https://www.github.com"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.discord.com"><i class="fa-brands fa-discord"></i></a>
             </div>
+            <a href="./about-dev.html" class="about-dev-btn">
+                About Developer
+            </a>
         </div>
     </div>
 
@@ -1570,5 +1573,6 @@
         <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital Entertainment.
             © Developed by <a href="about-dev.html">MarNonymous792</a></p>
     </div>
+    
 </body>
 </html>
