--- a/tourna.html
+++ b/tourna.html
@@ -120,8 +120,12 @@
                 <a href="https://www.github.com"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.discord.com"><i class="fa-brands fa-discord"></i></a>
             </div>
+            <a href="./about-dev.html" class="about-dev-btn">
+                About Developer
+            </a>
         </div>
     </div>
+    
 
     <div class="copyright">
         <p>Lancers is a fan-driven Yu-Gi-Oh! store and community. We are not officially affiliated with Konami Digital
