--- a/decklists/cyber-dragon.html
+++ b/decklists/cyber-dragon.html
@@ -69,6 +69,9 @@
                 <a href="https://www.github.com"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.discord.com"><i class="fa-brands fa-discord"></i></a>
             </div>
+            <a href="../about-dev.html" class="about-dev-btn">
+                About Developer
+            </a>
         </div>
     </div>
 
