--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <br>
                     <br>
                     <br>
-                    <button>Join Us</button>
+                    <button onclick="document.location='https://marnonymous792.github.io/html--project/index.html#footer'">Join Us</button>
                 </p>
 
 
@@ -141,7 +141,7 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="footer-content">
             <div>
                 <h2>Lancers HQ</h2>
