--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </li>
         <li>
-            <span>Community ▼</spa>
+            <span>Community ▼</span>
             <ul class="dropdown">
                 <li><a href="tourna.html">Tournaments</a></li>
                 <li><a href="decklist.html">Deck Report</a></li>
