--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <body>
     <ul class="navbar">
-        <li class="logo" onlclick="document.location ='https://marnonymous792.github.io/html--project/index.html'">Lancers HQ</li>
+        <li class="logo" onclick="document.location ='https://marnonymous792.github.io/html--project/index.html'">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
             <a>Products ▼</a>
