--- a/db.html
+++ b/db.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <ul class="navbar">
-        <li class="logo">Lancers HQ</li>
+        <li class="logo" onclick="document.location='https://marnonymous792.github.io/html--project/index.html'">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
             <a>Products ▼</a>
