--- a/decklists/blue-eyes.html
+++ b/decklists/blue-eyes.html
@@ -11,12 +11,12 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/d972c1f784.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css">
-    <title>Decklist: Salamangreat</title>
+    <title>Decklist: Blue Eyes</title>
 </head>
 
 <body>
     <ul class="navbar">
-        <li class="logo">Lancers HQ</li>
+        <li class="logo" onclick="document.location='https://marnonymous792.github.io/html--project/index.html'">Lancers HQ</li>
         <li><a href="../index.html">Home</a></li>
         <li>
             <a>Products ▼</a>
