--- a/singles.html
+++ b/singles.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <ul class="navbar">
-        <li class="logo">Lancers HQ</li>
+        <li class="logo" onclick="document.location='https://marnonymous792.github.io/html--project/index.html'">Lancers HQ</li>
         <li><a href="index.html">Home</a></li>
         <li>
             <a>Products ▼</a>
@@ -399,7 +399,7 @@
             <div class="c">
                 <img src="./images/RC03/SE/10113.jpg" alt="">
                 <p class="name">Raigeki</p>
-                <p class="price">₱</p>
+                <p class="price">₱260</p>
 
                 <div class="c-icons">
                     <a href="./images/RC03/SE/10113.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
@@ -579,7 +579,7 @@
             <div class="c">
                 <img src="./images/RC03/SE/10162.jpg" alt="">
                 <p class="name">Paleozoic Dinomishcus</p>
-                <p class="price">₱</p>
+                <p class="price">₱260</p>
 
                 <div class="c-icons">
                     <a href="./images/RC03/SE/10162.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
@@ -957,7 +957,7 @@
             <div class="c">
                 <img src="./images/RC03/SR/10069.jpg" alt="">
                 <p class="name">Red Blossoms from Underroot</p>
-                <p class="price">₱</p>
+                <p class="price">₱90</p>
 
                 <div class="c-icons">
                     <a href="./images/RC03/SR/10069.jpg" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a>
